force-app/main/default/objects/kesaiMeisai__c/kesaiMeisai__c.object-meta.xml
<CustomObject>
    <label>決済明細</label>
    <nameField>
        <label>決済名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>