force-app/main/default/objects/kesaiMeisai__c/fields/denpyoNum__c.field-meta.xml
<CustomField>
    <fullName>denpyoNum__c</fullName>
    <label>伝票番号</label>
    <length>80</length>
    <type>Text</type>
</CustomField>