force-app/main/default/objects/kesaiMeisai__c/fields/kesaiDate__c.field-meta.xml
<CustomField>
    <fullName>kesaiDate__c</fullName>
    <label>決済日</label>
    <required>true</required>
    <type>Date</type>
</CustomField>