force-app/main/default/objects/kesaiMeisai__c/fields/kingaku__c.field-meta.xml
<CustomField>
    <fullName>kingaku__c</fullName>
    <label>金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>