force-app/main/default/objects/kesaiMeisai__c/fields/koza__c.field-meta.xml
<CustomField>
    <fullName>koza__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>口座</label>
    <referenceTo>Kouza__c</referenceTo>
    <relationshipLabel>決済明細</relationshipLabel>
    <relationshipName>koza</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>