force-app/main/default/objects/kesaiMeisai__c/fields/tesuryou__c.field-meta.xml
<CustomField>
    <fullName>tesuryou__c</fullName>
    <label>手数料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>