force-app/main/default/objects/kesaiMeisai__c/fields/torihikiHead__c.field-meta.xml
<CustomField>
    <fullName>torihikiHead__c</fullName>
    <label>取引ヘッダ</label>
    <referenceTo>torihikiHead__c</referenceTo>
    <relationshipLabel>決済明細</relationshipLabel>
    <relationshipName>torihikiHead</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>