force-app/main/default/objects/kesaiMeisai__c/fields/torihikiNaiyou__c.field-meta.xml
<CustomField>
    <fullName>torihikiNaiyou__c</fullName>
    <label>取引内容</label>
    <length>80</length>
    <type>Text</type>
</CustomField>